# CompactLTJ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_server_full_ramdisk_limit_1000_1291_queries.sh  benchmark_server_full_ramdisk_no_limit_1291.sh  build_index.sh  build_index_filtered.sh  build_index_full.sh  env_var_dijkstra.sh  env_var_shannon.sh  index_build_wikidata_filtered.txt  index_query_full_dataset_calculated_GAO.txt  index_query_full_dataset_ring_gao.txt  index_query_wikidata_filtered.txt  index_query_wikidata_full.txt  index_query_wikidata_full_gao.txt  main.cpp  output_full_1291_queries_limit_1000.txt  output_full_1921_queries_no_limit.txt  queries.txt  queries_filtered.txt  queries_filtered_dash.txt  queries_full.txt  query_index.sh  release_build.sh  run_query_dijkstra.sh  tmp_gao_full.txt  wikidata-big-queries-gao  wikidata-big-queries-gao_1291  wikidata-big-queries-gao_1295  wikidata-big-queries-output.txt  wikidata-filtered-query_measures.txt
Queries/: Queries-wikidata-bgps-limit1000.txt
include/: DEL_compact_trie.hpp  compact_trie.hpp  compact_trie_iterator.hpp  compact_trie_iv.hpp  compact_trie_iv_iterator.hpp  config.hpp  index.hpp  iterator.hpp  leapfrog_trie_join.hpp  regular_trie.hpp  table_indexing.hpp  term.hpp  trie_interface.hpp  tuple.hpp  utils.hpp  wavelet_tree.hpp
src/: build_index.cpp  main.cpp  query_index.cpp
